feat: 订单详情优惠券店铺id

--- a/pages/subpages/mine/merchant/subpages/goods-order/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/goods-order/subpages/order-detail/index.wxml
@@ -76,7 +76,7 @@
       <price-unit price="{{orderInfo.goodsPrice || 0}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
     </view>
     <view class="list row between" wx:if="{{orderInfo.couponDenomination}}">
-      <view class="title">优惠券抵扣</view>
+      <view class="title">优惠券抵扣（{{orderInfo.couponShopId ? '店铺' : '平台'}}）</view>
       <view class="row">
         <text>-</text>
         <price-unit price="{{orderInfo.couponDenomination}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
