feat: 订单查看详情按钮位置

--- a/pages/subpages/mine/order/components/goods-order-item/index.wxml
+++ b/pages/subpages/mine/order/components/goods-order-item/index.wxml
@@ -75,7 +75,7 @@
         catchtap="navToEvaluation"
         hover-class="none"
       >评价</button>
-      <button class="btn" catchtap="navToDetail">查看详情</button>
+      <button class="btn" catchtap="navToDetail" hover-class="none">查看详情</button>
     </view>
   </view>
 </view>
