--- a/pages/subpages/mine/merchant/subpages/income-detail/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/income-detail/index.wxml
@@ -183,7 +183,7 @@
       <view class="goods-list">
         <goods-item 
           wx:for="{{item.goodsList}}" 
-          wx:key="indxe" 
+          wx:key="index" 
           wx:for-item="goods" 
           item="{{goods}}" 
           isLast="{{index === (item.goodsList.length - 1)}}" 
