--- a/pages/subpages/mine/merchant/components/goods-order-item/index.wxml
+++ b/pages/subpages/mine/merchant/components/goods-order-item/index.wxml
@@ -23,7 +23,7 @@
         <view class="order-sn">订单编号 {{item.orderSn}}</view>
         <image class="copy-icon" src="./images/copy.png" />
       </view>
-      <view class="deliver-info row top" wx:if="{{item.deliveryMode === 1}}" catchtap="copyAddress">
+      <view class="deliver-info row top" wx:if="{{(item.status === 201 && item.deliveryMode === 1) || item.status === 202}}" catchtap="copyAddress">
         <image class="address-icon" src="./images/address.png" />
         <view class="address-detail">{{item.consignee}}，{{item.mobile}}，{{item.address}}</view>
         <image class="copy-icon" src="./images/copy.png" />
