feat: 收益提现提示

--- a/pages/subpages/mine/merchant/subpages/income-detail/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/income-detail/index.wxml
@@ -57,6 +57,13 @@
     >
       立即提现
     </view>
+    <view class="withdraw-tips-wrap row">
+      <view class="withdraw-time-tips">每月25～31号可提现上月的结算收益</view>
+      <view class="withdraw-rules-btn" bindtap="checkWithdrawRules">
+        <view>提现规则</view>
+        <image class="arrow" src="/images/arrow.png" />
+      </view>
+    </view>
   </view>
 
   <view class="daily-data-wrap">
