--- a/pages/subpages/mine/promoter/subpages/account/index.wxml
+++ b/pages/subpages/mine/promoter/subpages/account/index.wxml
@@ -47,7 +47,7 @@
       </view>
     </view>
     <view class="withdraw-tips-wrap row">
-      <view class="withdraw-time-tips">每月25～31号可提现上月的结算收益</view>
+      <view class="withdraw-time-tips">每月25～31号可提现上月的结算奖励</view>
       <view class="withdraw-rules-btn" bindtap="checkWithdrawRules">
         <view>提现规则</view>
         <image class="arrow" src="/images/arrow.png" />
