--- a/components/goods-item/index.wxml
+++ b/components/goods-item/index.wxml
@@ -40,7 +40,7 @@
     <view class="info-wrap row between">
       <view class="row baseline">
         <price-unit price="{{item.price || 0}}" />
-        <view class="market-price" wx:if="{{item.marketPrice}}">¥{{item.marketPrice}}</view>
+        <view class="market-price" wx:if="{{item.marketPrice && item.marketPrice !== '0.00'}}">¥{{item.marketPrice}}</view>
       </view>
       <view class="sales-volume" wx:if="{{item.salesVolume}}">
         已售{{ item.salesVolume }}
