feat: 商品配送模式

--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
@@ -255,7 +255,7 @@
   <view class="btns row" wx:if="{{goodsInfo.status === 1 && goodsInfo.stock}}">
     <button 
       class="add-cart-btn"
-      wx:if="{{!goodsInfo.isGift || (goodsInfo.isGift && userInfo.promoterInfo && userInfo.promoterInfo.status === 1)}}" 
+      wx:if="{{goodsInfo.deliveryMode !== 2 && (!goodsInfo.isGift || (goodsInfo.isGift && userInfo.promoterInfo && userInfo.promoterInfo.status === 1))}}" 
       bindtap="showSpecPopup" 
       data-mode="{{1}}"
     >
