--- a/components/goods-item/index.wxml
+++ b/components/goods-item/index.wxml
@@ -47,7 +47,7 @@
       </view>
     </view>
     <view class="shop-info row" wx:if="{{showShopInfo && item.shopInfo}}" catchtap="navToShop">
-      <image class="shop-logo" src="{{item.shopInfo.logo}}" lazy-load />
+      <image class="shop-logo" src="{{item.shopInfo.logo}}" lazy-load mode="aspectFill" />
       <view class="shop-name omit single">{{item.shopInfo.name}}</view>
     </view>
   </view>
