--- a/pages/subpages/mall/goods/subpages/shop/index.wxml
+++ b/pages/subpages/mall/goods/subpages/shop/index.wxml
@@ -10,7 +10,7 @@
 
 <view class="container">
   <view class="shop-info-wrap row">
-    <image class="shop-logo" src="{{shopInfo.logo}}" />
+    <image class="shop-logo" src="{{shopInfo.logo}}" mode="aspectFill" />
     <view class="info">
       <view class="shop-name omit single">{{shopInfo.name}}</view>
       <view class="authentication row">{{shopInfo.type === 2 ? '企业店铺' : '个人店铺'}}</view>
