--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
@@ -141,6 +141,7 @@ page {
   position: absolute;
   left: 0;
   top: 740rpx;
+  padding-bottom: calc(100rpx + env(safe-area-inset-bottom));
   width: 100%;
 }
 .container.gift {
