--- a/pages/subpages/mine/order/subpages/goods-order/order-detail/index.wxml
+++ b/pages/subpages/mine/order/subpages/goods-order/order-detail/index.wxml
@@ -174,7 +174,8 @@
   <button class="btn active" wx:if="{{orderInfo.status === 401 || orderInfo.status === 402 || orderInfo.status === 403}}" bindtap="navToEvaluation" hover-class="none">
     评价
   </button>
-  <button 
+  <!-- todo 前期先用官方客服 -->
+  <!-- <button 
     wx:if="{{!orderInfo.shopInfo}}"
     class="btn active"
     send-message-title="订单编号：{{orderInfo.orderSn}}"
@@ -187,7 +188,19 @@
   >
     联系客服
   </button>
-  <button class="btn active" wx:if="{{orderInfo.shopInfo}}" bindtap="contact" hover-class="none">联系客服</button>
+  <button class="btn active" wx:if="{{orderInfo.shopInfo}}" bindtap="contact" hover-class="none">联系客服</button> -->
+  <button 
+    class="btn active"
+    send-message-title="订单编号：{{orderInfo.orderSn}}"
+    send-message-img="{{orderInfo.goodsList[0].cover}}"
+    send-message-path="/pages/mine/subpages/order/subpages/order-detail/index?id={{orderInfo.id}}"
+    show-message-card="{{true}}"
+    open-type="contact" 
+    session-from="sessionFrom" 
+    hover-class="none"
+  >
+    联系客服
+  </button>
   <button class="btn active" wx:if="{{orderInfo.status === 101}}" bindtap="payOrder" hover-class="none">继续付款</button>
 </view>
 
