--- a/pages/subpages/mall/goods/subpages/cart/index.wxml
+++ b/pages/subpages/mall/goods/subpages/cart/index.wxml
@@ -69,6 +69,8 @@
     <fall-flow 
       list="{{recommendGoodsList}}" 
       generic:item="goods-item" 
+      loading="{{loading}}"
+      finished="{{finished}}"
     />
   </view>
 </view>
